--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Application Form</title>
-
         <meta name="description" content="7-1 JavaScript Challenge" />
-        <script src="scripts/game2.js" async></script>
+        <script src="scripts/game.js" async></script>
 
     </head>
     <body>
         <h1>Match Game</h1>
         <div id="game">
             <div id="startForm">
-                I Want <input type="number" id="numSymbols" min="1" max="8"> Symbols.
+                Play with <input type="number" id="numSymbols" min="1" max="8" value="1"> Symbols
                 <button id='startButton'>Play Now</button>
             </div>
         </div>
