adjust background size

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"/>
-        <title>Application Form</title>
+        <title>Matching Game</title>
         <meta name="description" content="7-1 JavaScript Challenge" />
         <script src="scripts/game.js" async></script>
 
